smartquailrds-ins/templates/06-redis-redisinsight-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "redisinsight.dev.smartquail.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: redisinsight-service
              port:
                number: 8001
